--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <div id="app"></div>
+
+
+    <button>123</button>
+
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+
+
