--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
 
-
+ qwreqwr
     <button>123</button>
 
 
