--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!-- <div id="app"></div> -->
 
- qwreqwr
-    <button>123</button>
+ 
+    <button class="btn">123</button>
 
 
     <script type="module" src="/src/main.ts"></script>
