--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- <div id="app"></div> -->
 
  
-    <button class="btn">123</button>
+    <button class="btn">кнопка</button>
+
+    <div class="coordinate"></div>
 
 
     <script type="module" src="/src/main.ts"></script>
