--- a/index.html
+++ b/index.html
@@ -7,12 +7,37 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <!-- <div id="app"></div> -->
+     
 
- 
-    <button class="btn">кнопка</button>
+    
 
-    <div class="coordinate"></div>
+    <div class="container">
+      <header>agsf</header>
+      <div class="wrapper_header ">VLADIMIR KUDARENKO
+        <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
+        <div class=""></div>
+        <div class=""></div>
+      </div>
+      <div class="main_menu">adsda</div>
+
+
+
+</div>
+
+
+
+
+
+
+
+<!-- 
+<div class="container2">
+  <span></span>
+</div> -->
+
+
+
+
 
 
     <script type="module" src="/src/main.ts"></script>
