--- a/index.html
+++ b/index.html
@@ -12,13 +12,35 @@
     
 
     <div class="container">
-      <header>agsf</header>
-      <div class="wrapper_header ">VLADIMIR KUDARENKO
-        <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
-        <div class=""></div>
-        <div class=""></div>
+      <header>
+        <div class="navbar, navbar_first">My portfolio</div>
+          <div class="navbar">ABOUT</div>
+            <div class="navbar">MY SKILLS</div>
+            <div class="navbar">RESUME</div>
+          <div class="navbar">SERVICES</div>
+         <div class="navbar">CONTACTS</div>
+      </header>
+
+
+        <div class="wrapper_header">
+          <div class="wrapper_header_abbreviation">
+            <div class="wrapper_header_up">V</div>
+              <div class="wrapper_header_down">K</div>
+            </div>
+           <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
+          <div class="wrapper_header_logo">CODER. DESIGNER. PROFESSIONAL.</div>
+        </div>
+        
+        <div class="main_menu">
+        <div class="portPhoto"><img src="Screen_my_photo.jpg" alt=""></div>
+        <div class="">wsdfsdfqe</div>
+        <div class="">wqdfse</div>
+        <div class="">wsdfsdfqe</div>
+        <div class="">qwsdfsdfe</div>
+
+
+
       </div>
-      <div class="main_menu">adsda</div>
 
 
 
