--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     
 
     <div class="container">
+      <nav>
+        <a href="#sec1"></a>
+          <a href="#sec2"></a>
+            <a href="#sec3"></a>
+          <a href="#sec4"></a>
+        <a href="#sec5"></a>
+      </nav>
+      
       <header>
         <div class="navbar_first">My portfolio</div>
           <div class="navbar">ABOUT</div>
             <div class="navbar">MY SKILLS</div>
             <div class="navbar">RESUME</div>
-          <div class="navbar">SERVICES</div>
+          <div class="navbar">PROJECTS</div>
          <div class="navbar">CONTACTS</div>
       </header>
 
