--- a/index.html
+++ b/index.html
@@ -14,20 +14,13 @@
 
 
   <div class="container">
-    <!-- <nav>
-        <a href="#sec1"></a>
-          <a href="#sec2"></a>
-            <a href="#sec3"></a>
-          <a href="#sec4"></a>
-        <a href="#sec5"></a>
-      </nav> -->
-
+   
     <header>
       <div class="navbar_first">My portfolio</div>
-      <div class="navbar"><a href="#about">ABOUT</a></div>
-      <div class="navbar">SKILLS</div>
-      <div class="navbar">RESUME</div>
-      <div class="navbar">PROJECTS</div>
+        <div class="navbar"><a href="#about">ABOUT</a></div>
+          <div class="navbar">SKILLS</div>
+          <div class="navbar">RESUME</div>
+        <div class="navbar">PROJECTS</div>
       <div class="navbar">CONTACTS</div>
     </header>
 
@@ -61,7 +54,7 @@
       <div class="content_title2">Мои навыки:</div>
       <div class="content_end">
         <div>- опыт работы с HTML,CSS,JS</div>
-        <div>- знание JavaScript/JQuery</div>
+        <div>- знание JavaScript</div>
         <div>- знание Bootstrap</div>
         <div>- опыт адаптивной верстки</div>
         <div>- знание английского языка</div>
