--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
    
     <header>
       <div class="navbar_first">My portfolio</div>
+      <div class="navbar"><a href="#home">HOME</a></div>
         <div class="navbar"><a href="#about">ABOUT</a></div>
-          <div class="navbar">SKILLS</div>
-          <div class="navbar">RESUME</div>
-        <div class="navbar">PROJECTS</div>
-      <div class="navbar">CONTACTS</div>
+          <div class="navbar"><a href="#skills">SKILLS</a></div>
+        <div class="navbar"><a href="#projects">PROJECTS</a> </div>
+      <div class="navbar"><a href="#contacts">CONTACTS</a></div>
     </header>
 
 
-    <div class="wrapper_header">
+    <div id="home" class="wrapper_header">
       <div class="wrapper_header_abbreviation">
         <div class="wrapper_header_up">V</div>
         <div class="wrapper_header_down">K</div>
       </div>
       <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
-      <div class="wrapper_header_logo">CODER. DESIGNER. PROFESSIONAL.</div>
+      <div class="wrapper_header_logo">CODER. DESIGNER.</div>
     </div>
 
     <div class="portPhoto"><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
@@ -40,24 +40,28 @@
       <div class="content_title">Информация обо мне</div>
       <div class="content">
         <div>
-          Я уверенный пользователь ПК и знаю такие языки как HTML и CSS, а также учу и понимаю Java Script, работаю с
+          Я начинающий специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю Java Script, работаю с
           Bootstrap.
           В сферу IT пришел в прошлом году и меня программирование очень заинтересовало. С того времени компьютер стал
           моим неразлучным другом.
         </div>
+        <!-- <div>
+          Поначалу я пытался заниматься сам в приложении Sololearn, но быстро понял, что программирование - это обширная область 
+          и что лучше начать изучение в академии TOP с грамотным наставником.
+        </div> -->
         <div>
           Мне нравится изучать программирование, постигать основы, совершенствоваться, также у меня уровень английского
           языка upper intermediate и при необходимости смогу вести проекты на английском,
           общаться с зарубежными компаниями.
         </div>
       </div>
-      <div class="content_title2">Мои навыки:</div>
+      <div class="content_title2">Личные качества:</div>
       <div class="content_end">
-        <div>- опыт работы с HTML,CSS,JS</div>
-        <div>- знание JavaScript</div>
-        <div>- знание Bootstrap</div>
-        <div>- опыт адаптивной верстки</div>
-        <div>- знание английского языка</div>
+        <div>- целеустремлённость</div>
+          <div>- настойчивость</div>
+            <div>- усидчивость</div>
+          <div>- стрессоустойчивость</div>
+        <div>- умение работать в команде</div>
       </div>
 
 
@@ -72,10 +76,16 @@
       <!-- <button class="btn">Связь со мной</button> -->
     </div>
 
-    <div class="skills">skills</div>
-    <div class="resume">resume</div>
-    <div class="services">services</div>
-    <div class="contacts">contacts</div>
+    <div id="skills" class="skills">
+      dsldgkjslig
+      sdf;lsfg
+      sfgfsg
+    </div>
+
+
+
+    <div id="projects" class="projects">projects</div>
+    <div id="contacts" class="contacts">contacts</div>
 
 
   </div>
