--- a/index.html
+++ b/index.html
@@ -160,23 +160,34 @@
       <h1>Мои работы</h1>
       <div class="projects_content">
         <div class="projects_box">
-          <div><a class="ball" href="https://replit.com/@belkud/Razvorachivaiushchaiasia-kartochka?v=1"><img
+          <div><a class="project_ball" href="https://replit.com/@belkud/Razvorachivaiushchaiasia-kartochka?v=1"><img
                 src="ball2.png" alt=""></a></div>
           <div>Игра в мяч <br>(JavaScript)</div>
         </div>
 
         <div class="projects_box">
-          <div><a class="bootstrap" href="https://belkud.github.io/bootstrap/Settings.html"><img
+          <div><a class="project_bootstrap" href="https://belkud.github.io/bootstrap/Settings.html"><img
                 src="bootstrap-icon.svg" alt=""></a></div>
           <div>Мини-проект <br>(Bootstrap)</div>
         </div>
 
         <div class="projects_box">
-          <div><a class="ball" href="https://replit.com/@belkud/Razvorachivaiushchaiasia-kartochka?v=1"><img
-                src="ball2.png" alt=""></a></div>
-          <div>Игра в мяч <br>(JavaScript)</div>
+          <div><a class="project_bootstrap" href="https://replit.com/@belkud/Bootstrap-Raspisaniie"><img
+                src="bootstrap-icon.svg" alt=""></a></div>
+          <div>Расписание <br>(Bootstrap)</div>
         </div>
 
+        <div class="projects_box">
+          <div><a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-rabota"><img
+                src="https://w7.pngwing.com/pngs/470/675/png-transparent-responsive-web-design-web-development-adaptive-web-design-web-design-search-engine-optimization-web-design-text.png" alt=""></a></div>
+          <div>Адаптивный дизайн <br>(HTML/CSS)</div>
+        </div>
+
+        <div class="projects_box">
+          <div><a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-2?v=1"><img
+                src="https://w7.pngwing.com/pngs/470/675/png-transparent-responsive-web-design-web-development-adaptive-web-design-web-design-search-engine-optimization-web-design-text.png" alt=""></a></div>
+          <div>Адаптивный дизайн 2<br>(HTML/CSS)</div>
+        </div>
 
       </div>
 
