--- a/index.html
+++ b/index.html
@@ -178,20 +178,19 @@
         </div>
 
         <div class="projects_box">
-          <div><a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-rabota"><img
-                src="https://w7.pngwing.com/pngs/470/675/png-transparent-responsive-web-design-web-development-adaptive-web-design-web-design-search-engine-optimization-web-design-text.png" alt=""></a></div>
+           <a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-rabota"> </a> 
           <div>Адаптивный дизайн <br>(HTML/CSS)</div>
         </div>
 
         <div class="projects_box">
-          <div><a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-2?v=1"><img
-                src="https://w7.pngwing.com/pngs/470/675/png-transparent-responsive-web-design-web-development-adaptive-web-design-web-design-search-engine-optimization-web-design-text.png" alt=""></a></div>
+           <a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-2?v=1"> </a> 
           <div>Адаптивный дизайн 2<br>(HTML/CSS)</div>
         </div>
 
+        
       </div>
 
- 
+
     </section>
 
 
