--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="projects_box">
           <div><a class="project_ball" href="https://replit.com/@belkud/Razvorachivaiushchaiasia-kartochka?v=1"><img
                 src="ball2.png" alt=""></a></div>
-          <div>Игра в мяч <br>(JavaScript)</div>
+          <div>JavaScript</div>
         </div>
 
         <div class="projects_box">
