--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
               <div class="battery_position">
                 <div>
                   <div>CSS</div>
-                  <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div>
+                  <div style="position: absolute; top: 46px;height: 58px; width: 200px; overflow: hidden;">
+                    <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div>
+                  </div>
                   <div class="battery"></div>
                 </div>
                 <div class="digitals">75%</div>
