--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <h1>Мои работы</h1>
       <div class="projects_content">
         <div class="projects_box">
-          <div><a class="project_ball" href="https://replit.com/@belkud/Razvorachivaiushchaiasia-kartochka?v=1"><img
+          <div><a class="project_ball" href="https://belkud.github.io/Interactive/"><img
                 src="ball2.png" alt=""></a></div>
           <div>JavaScript</div>
         </div>
@@ -198,8 +198,17 @@
            <a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-2?v=1"> </a> 
           <div>Адаптивный дизайн 2<br>(HTML/CSS)</div>
         </div>
-
         
+        <div class="projects_box">
+          <div>
+            <img src="airplane.png" style="width: 100px; position: absolute;" id="airplane" alt="">
+            <img src="planet.png" style="width: 100px; position: relative;" id="planet" alt="">
+          </div>
+           <a class="project_site" href="https://belkud.github.io/---------------/drivers.html"> </a> 
+          <div>Экскурсии по Сочи<br>(HTML/CSS)</div>
+        </div>
+
+  
       </div>
 
 
