--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
               <div class="battery_position">
                 <div>
                   <div>HTML</div>
+                  <div class="remove_battery" style="width: 45px;">
                   <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                 </div>
                   <!-- <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div> -->
                   <div class="battery"></div>
                 </div>
@@ -94,7 +96,7 @@
               <div class="battery_position">
                 <div>
                   <div>CSS</div>
-                  <div style="position: absolute; top: 46px;height: 58px; width: 200px; overflow: hidden;">
+                  <div class="remove_battery" style="width: 205px;">
                     <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div>
                   </div>
                   <div class="battery"></div>
@@ -105,7 +107,10 @@
               <div class="battery_position">
                 <div>
                   <div>JavaScript</div>
-                  <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div>
+                  <div class="remove_battery" style="width: 110px;">
+                    <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div>
+                  </div>
+                  
                   <div class="battery"></div>
                 </div>
                 <div class="digitals">45%</div>
@@ -114,7 +119,9 @@
               <div class="battery_position">
                 <div>
                   <div>TypeScript</div>
+                  <div class="remove_battery" style="width: 110px;">
                   <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                </div>
                   <div class="battery"></div>
                 </div>
                 <div class="digitals">45%</div>
@@ -127,7 +134,9 @@
               <div class="battery_position">
                 <div>
                   <div>Web Design</div>
-                  <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                  <div class="remove_battery" style="width: 140px;">
+                    <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                  </div>
                   <div class="battery"></div>
                 </div>
                 <div class="digitals">55%</div>
@@ -136,7 +145,9 @@
           <div class="battery_position">
             <div>
               <div>Web Development</div>
-              <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              <div class="remove_battery" style="width: 205px;">
+                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              </div>
               <div class="battery"></div>
             </div>
             <div class="digitals">75%</div>
@@ -145,7 +156,9 @@
           <div class="battery_position">
             <div>
               <div>BootsTrap</div>
-              <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              <div class="remove_battery" style="width: 110px;">
+                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              </div>
               <div class="battery"></div>
             </div>
             <div class="digitals">45%</div>
@@ -154,7 +167,9 @@
           <div class="battery_position">
             <div>
               <div>Что-то еще</div>
-              <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              <div class="remove_battery" style="width: 16px;">
+                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+              </div>
               <div class="battery"></div>
             </div>
             <div class="digitals">5%</div>
@@ -200,9 +215,9 @@
         </div>
         
         <div class="projects_box">
-          <div>
-            <img src="airplane.png" style="width: 100px; position: absolute;" id="airplane" alt="">
-            <img src="planet.png" style="width: 100px; position: relative;" id="planet" alt="">
+          <div style="margin-top: -10px;">
+            <img src="airplane.png" style="width: 106px; position: absolute;" id="airplane" alt="">
+            <img src="planet.png" style="width: 90px; position: relative;" id="planet" alt="">
           </div>
            <a class="project_site" href="https://belkud.github.io/---------------/drivers.html"> </a> 
           <div>Экскурсии по Сочи<br>(HTML/CSS)</div>
