--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
           <div>Экскурсии по Сочи<br>(HTML/CSS)</div>
         </div>
 
+        <div>
+          <img src="cat.png" alt="" style="position: absolute;">
+          <img src="eye.png" id="eye" alt="" style="position: relative ; width: 25px; margin-left: 165px; margin-top: 80px;">
+        </div>
   
       </div>
 
