--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         </div>
 
         <div>
-          <img src="cat.png" alt="" style="position: absolute;">
-          <img src="eye.png" id="eye" alt="" style="position: relative ; width: 25px; margin-left: 165px; margin-top: 80px;">
+          <img src="cat.png"   alt="" style="position: relative ;">
+          <img src="eye.png" id="eye" alt="" style="position: absolute ; width: 25px; margin-left: -75px; margin-top: 400px; padding-top: 80px;">
         </div>
   
       </div>
