--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
       <div class="navbar"><a href="#projects">PROJECTS</a> </div>
       <div class="navbar"><a href="#contacts">CONTACTS</a></div>
     </header>
+    
+    <!--! div c шириной экрана -->
 
+    <div id="width_of_display"
+    style=" text-align: center; position: fixed; z-index: 12; width: 120px; height: 35px; border-radius: 5px;border: 2px solid aquamarine; background-color: lightgrey;">
+  </div>
 
     <section id="home" class="wrapper_header">
       <div class="wrapper_header_abbreviation">
