--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
     <header>
       <div class="navbar_first">My portfolio</div>
-      <div class="navbar"><a href="#home">HOME</a></div>
-      <div class="navbar"><a href="#about">ABOUT</a></div>
-      <div class="navbar"><a href="#skills">SKILLS</a></div>
-      <div class="navbar"><a href="#projects">PROJECTS</a> </div>
-      <div class="navbar"><a href="#contacts">CONTACTS</a></div>
+      <div class="" style="display: flex; gap: 50px; padding-right: 3%; ">
+        <div class="navbar"><a href="#home">HOME</a></div>
+          <div class="navbar"><a href="#about">ABOUT</a></div>
+           <div class="navbar"><a href="#skills">SKILLS</a></div>
+          <div class="navbar"><a href="#projects">PROJECTS</a> </div>
+        <div class="navbar"><a href="#contacts">CONTACTS</a></div>
+      </div>
     </header>
     
     <!--! div c шириной экрана -->
@@ -29,6 +31,8 @@
     <div id="width_of_display"
     style=" text-align: center; position: fixed; z-index: 12; width: 120px; height: 35px; border-radius: 5px;border: 2px solid aquamarine; background-color: lightgrey;">
   </div>
+
+
 
     <section id="home" class="wrapper_header">
       <div class="wrapper_header_abbreviation">
