--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 
-    <section id="home" class="wrapper_header">
+    <section id="home" style="border-bottom: 3px solid white; height: 100vh;" class="wrapper_header">
       <div class="wrapper_header_abbreviation">
         <div class="wrapper_header_up">V</div>
         <div class="wrapper_header_down">K</div>
