--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="portPhoto"><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
 
     <section id="about" class="about">
-      <h2 class="content_title">Информация обо мне</h2>
-      <div class="content">
+      <div class="about_left" >
+        <h2 class="content_title">Информация обо мне</h2>
         <div>
           Я начинающий специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю Java Script,
           работаю с
@@ -66,8 +66,8 @@
         </div>
       </div>
 
-      <h3 class="content_title2">Личные качества:</h3>
-      <div class="content_end">
+      <div class="about_right">
+        <h2 class="content_title">Личные качества:</h2>
         <div>- целеустремлённость</div>
         <div>- настойчивость</div>
         <div>- усидчивость</div>
