--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section id="about" class="about">
       <div class="about_left" >
-        <h2 class="content_title">Информация обо мне</h2>
+        <h2 class="content_title" style="line-height: 1.2em;">Информация обо мне</h2>
         <div>
           Я начинающий специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю Java Script,
           работаю с
@@ -67,7 +67,7 @@
       </div>
       
       <div class="about_right">
-        <h2 class="content_title">Личные качества:</h2>
+        <h2 class="content_title" style="line-height: 1.2em;">Личные качества:</h2>
         
         <div>- целеустремлённость</div>
         <div>- настойчивость</div>
