--- a/index.html
+++ b/index.html
@@ -82,15 +82,9 @@
     <section id="skills" class="skills">
       <h2 class="skills_title">Мои навыки</h2>
       <div class="content_skills" style="margin-left: 250px; margin-right: 250px;">
-        <div>
+        <div class="battery_left">
           <h1>Навыки кодирования</h1>
 
-          <!-- <div class="inside_flex">
-                <div class="inside"></div>
-                <div class="inside"></div>
-                <div class="inside"></div>
-              </div> -->
-          <!-- <img src="Background_battery.png" alt=""> -->
           <div class="battery_position">
             <div>
               <div>HTML</div>
@@ -138,7 +132,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="right">
           <h1>Профессиональные навыки</h1>
 
           <div class="battery_position">
