--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <section id="projects" class="projects">
       <h1>Мои работы</h1>
       <div class="projects_content">
-        <div>
+        <div class="projects_content_left">
           <div class="projects_box">
             <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="ball2.png" alt=""></a>
             </div>
@@ -210,7 +210,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="projects_content_right">
           <div class="projects_box">
             <a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-rabota"> </a>
             <div>Адаптивный дизайн <br>(HTML/CSS)</div>
