--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="wrapper_header_logo">CODER. DESIGNER.</div>
     </section>
 
-    <div class="portPhoto"><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
+    <div class="portPhoto" style=""><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
 
     <section id="about" class="about">
       <div class="about_left" >
@@ -81,7 +81,7 @@
 
     <section id="skills" class="skills">
       <h2 class="skills_title">Мои навыки</h2>
-      <div class="content_skills" style="margin-left: 250px; margin-right: 250px;">
+      <div class="content_skills" style="">
         <div class="battery_left">
           <h1>Навыки кодирования</h1>
 
