--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
 
 
-    <section id="home" style=" display: flex; text-align: center; border-bottom: 3px solid white; height: 100vh;">
-      <div class="wrapper_header_abbreviation">
-        <div class="wrapper_header_up">V</div>
-        <div class="wrapper_header_down">K</div>
+    <section id="home" style="display: flex; text-align: center; border-bottom: 3px solid white; height: 100vh;">
+      <div class="wrapper_header_abbreviation" style="border:1px solid red">
+        <div class="wrapper_header_up" style="border:1px solid red">V</div>
+        <div class="wrapper_header_down" style="border:1px solid red">K</div>
       </div>
-      <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
-      <div class="wrapper_header_logo">CODER. DESIGNER.</div>
+      <div class="wrapper_header_name" style="border:1px solid red">VLADIMIR KUDARENKO</div>
+      <div class="wrapper_header_logo" style="border:1px solid red">CODER. DESIGNER.</div>
     </section>
 
     <div class="portPhoto" style=""><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
