--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <section id="home" style="display: flex; text-align: center; border-bottom: 3px solid white; height: 100vh;">
-      <div class="wrapper_header_abbreviation" style="border:1px solid red">
+      <div class="wrapper_header_abbreviation" >
         <div class="wrapper_header_up" style="border:1px solid red">V</div>
         <div class="wrapper_header_down" style="border:1px solid red">K</div>
       </div>
@@ -43,7 +43,7 @@
       <div class="wrapper_header_logo" style="border:1px solid red">CODER. DESIGNER.</div>
     </section>
 
-    <div class="portPhoto" style=""><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
+    <div class="portPhoto" style="border:3px solid red"><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
 
     <section id="about" class="about">
       <div class="about_left" >
