--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <div class="wrapper_header_up" style="border:1px solid red">V</div>
         <div class="wrapper_header_down" style="border:1px solid red">K</div>
       </div>
-      <div class="wrapper_header_name" style="border:1px solid red">VLADIMIR KUDARENKO</div>
-      <div class="wrapper_header_logo" style="border:1px solid red">CODER. DESIGNER.</div>
+      <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
+      <div class="wrapper_header_logo">CODER. DESIGNER.</div>
     </section>
 
-    <div class="portPhoto" style="border:3px solid red"><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
+    <div class="portPhoto" style="border:1px solid red"><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
 
     <section id="about" class="about">
       <div class="about_left" >
