--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- <div class="qwe"> -->
 
       
-      <div class="about_left" style="border:1px solid red;">
+      <div class="about_left" style="border:1px solid blue;">
         <h2 class="content_title" style="line-height: 1.2em;">Информация обо мне</h2>
         
         <div class="sdf">
