--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <section id="home" style="display: flex; text-align: center; border-bottom: 3px solid white; height: 100vh;">
       <div class="wrapper_header_abbreviation" >
-        <div class="wrapper_header_up" style="border:1px solid red">V</div>
-        <div class="wrapper_header_down" style="border:1px solid red">K</div>
+        <div class="wrapper_header_up" >V</div>
+        <div class="wrapper_header_down">K</div>
       </div>
       <div class="wrapper_header_name">VLADIMIR KUDARENKO</div>
       <div class="wrapper_header_logo">CODER. DESIGNER.</div>
@@ -45,7 +45,7 @@
 
     <div class="portPhoto"  ><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
 
-    <section id="about" class="about" style="border:1px solid red">
+    <section id="about" class="about">
       
       <!-- <div class="qwe"> -->
 
@@ -197,7 +197,7 @@
 
 
 
-    <section id="projects" class="projects">
+    <section id="projects" class="projects" style ="border: 2px solid red">
       <h1>Мои работы</h1>
       <div class="projects_content">
         <div class="projects_content_left">
@@ -240,12 +240,8 @@
             <div>Экскурсии по Сочи<br>(HTML/CSS)</div>
           </div>
         </div>
-
-
-
-
+  
       </div>
-
 
     </section>
 
