--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
       <div class="navbar_first">My portfolio</div>
-      <div class="" style="display: flex; gap: 50px; padding-right: 3%; ">
+      <div class="navbar_buttons" style="display: flex; gap: 50px; padding-right: 3%; ">
         <div class="navbar"><a href="#home">HOME</a></div>
           <div class="navbar"><a href="#about">ABOUT</a></div>
            <div class="navbar"><a href="#skills">SKILLS</a></div>
@@ -29,7 +29,7 @@
     <!--! div c шириной экрана -->
 
     <div id="width_of_display"
-    style=" text-align: center; position: fixed; z-index: 12; width: 120px; height: 35px; border-radius: 5px;border: 2px solid aquamarine; background-color: lightgrey;">
+    style="opacity: 0.5; text-align: center; position: fixed; z-index: 12; width: 120px; height: 35px; border-radius: 5px;border: 2px solid aquamarine; background-color: lightgrey;">
   </div>
 
 
@@ -197,11 +197,11 @@
 
 
 
-    <section id="projects" class="projects" style ="border: 2px solid red">
+    <section id="projects" class="projects">
       <h1>Мои работы</h1>
       <div class="projects_content">
         <div class="projects_content_left">
-          <div class="projects_box">
+          <div class="projects_box" style="margin-top: -20px;">
             <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="ball2.png" alt=""></a>
             </div>
             <div>JavaScript</div>
