--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
       <div class="navbar_first">My portfolio</div>
-      <div class="navbar_buttons" style="display: flex; gap: 50px; padding-right: 3%; ">
+      <div class="navbar_buttons" style="display: flex; padding-right: 3%; ">
         <div class="navbar"><a href="#home">HOME</a></div>
           <div class="navbar"><a href="#about">ABOUT</a></div>
            <div class="navbar"><a href="#skills">SKILLS</a></div>
@@ -201,7 +201,7 @@
       <h1>Мои работы</h1>
       <div class="projects_content">
         <div class="projects_content_left">
-          <div class="projects_box" style="margin-top: -20px;">
+          <div class="projects_box" style="margin-top: -10px;">
             <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="ball2.png" alt=""></a>
             </div>
             <div>JavaScript</div>
