--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
         <h5>Связаться со мной</h5>
         <div class="contacts_content">
           <div class="content_left">
-            <div>Если вам понравились мои работы заполните пожалуйста
+            <div class="hide_info">Если вам понравились мои работы заполните пожалуйста
               форму или свяжитесь по нижеуказанным контактам.
             </div>
             <div>Мои контакты:</div>
-            <div><span>&#9990;</span>+79803734665<br><span>&#9990;</span>+79524350754</div>
-            <div><a style="color: white;" href="https://mail.yandex.ru/"><span>&#9993;</span>vlad-belkud@yandex.ru</a> <br>
-              <a style="color: white;" href="skype:belkud18"><svg xmlns="http://www.w3.org/2000/svg" fill="white" width="20px" height="30px"
+            <div class="telephone"><span>&#9990;</span>+79803734665<br><span>&#9990;</span>+79524350754</div>
+            <div class="e-mail"><a style="color: white;" href="https://mail.yandex.ru/"><span>&#9993;</span>vlad-belkud@yandex.ru</a> </div>
+           <div class="e-mail2"><a style="color: white;" href="skype:belkud18"><svg xmlns="http://www.w3.org/2000/svg" fill="white" width="20px" height="30px"
                   viewBox="0 -20 64 64">
                   <title />
                   <path
