--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="navbar"><a href="#projects">PROJECTS</a> </div>
         <div class="navbar"><a href="#contacts">CONTACTS</a></div>
       </div>
+      <div class="navbar_small_button"> <img src="button.png" alt=""></div>
     </header>
     
     <!--! div c шириной экрана -->
