--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
           <div class="navbar"><a href="#projects">PROJECTS</a> </div>
         <div class="navbar"><a href="#contacts">CONTACTS</a></div>
       </div>
-      <div class="navbar_small_button"> <img src="button.png" alt=""></div>
+      <ul class="navbar_small_button"> <img src="button.png" alt="">
+        <li class="navbar" style="border-top: 1px solid aliceblue; margin-top: 2px;"><a href="#home">HOME</a></li>
+        <li class="navbar"><a href="#about">ABOUT</a></li>
+         <li class="navbar"><a href="#skills">SKILLS</a></li>
+        <li class="navbar"><a href="#projects">PROJECTS</a> </li>
+      <li class="navbar"><a href="#contacts">CONTACTS</a></li>
+      </ul>
+
     </header>
     
     <!--! div c шириной экрана -->
