--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     </header>
     
-    <!--! div c шириной экрана -->
 
-    <div id="width_of_display"
+    <!--! div c шириной экрана (пиксели) -->
+    <!-- <div id="width_of_display"
     style="opacity: 0.5; text-align: center; position: fixed; z-index: 12; width: 120px; height: 35px; border-radius: 5px;border: 2px solid aquamarine; background-color: lightgrey;">
-  </div>
+  </div> -->
 
 
 
