--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
 
           <div class="projects_box">
-            <div><a class="project_bootstrap" href="https://replit.com/@belkud/Bootstrap-Raspisaniie"><img
+            <div><a class="project_bootstrap" href="https://ee1f391b-be35-46f7-9933-ab799cdc0612-00-wfjohtfwxr78.global.replit.dev/Homework.html"><img
                   src="bootstrap-icon.svg" alt=""></a></div>
             <div>Расписание <br>(Bootstrap)</div>
           </div>
@@ -230,12 +230,12 @@
 
         <div class="projects_content_right">
           <div class="projects_box">
-            <a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-rabota"> </a>
+            <a class="project_design" href="https://aae9c035-fdd3-4463-9b8b-1663e1d9b618-00-1ssvsw41b0qyy.global.replit.dev/"> </a>
             <div>Адаптивный дизайн <br>(HTML/CSS)</div>
           </div>
 
           <div class="projects_box">
-            <a class="project_design" href="https://replit.com/@belkud/Kontrolnaia-2?v=1"> </a>
+            <a class="project_design" href="https://ee30f393-60c7-461c-85a9-9976a2d2fa59-00-39k3q4mdrre2a.global.replit.dev/"> </a>
             <div>Адаптивный дизайн 2<br>(HTML/CSS)</div>
           </div>
 
