--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
       <h1>Мои работы</h1>
       <div class="projects_content">
         <div class="projects_content_left">
+
+          
+
+          <div class="projects_box" style="margin-top: -40px;">
+            <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="src/deletedBackground.gif" alt=""></a>
+            </div>
+            <div>JavaScript (фононовые темы)</div>
+          </div>
+
           <div class="projects_box" style="margin-top: -10px;">
             <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="ball2.png" alt=""></a>
             </div>
