--- a/index.html
+++ b/index.html
@@ -208,9 +208,8 @@
     <section id="projects" class="projects">
       <h1>Мои работы</h1>
       <div class="projects_content">
-        <div class="projects_content_left">
 
-          
+        <div class="projects_content_left">
 
           <div class="projects_box" style="margin-top: -40px;">
             <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="src/deletedBackground.gif" alt=""></a>
@@ -238,6 +237,13 @@
         </div>
 
         <div class="projects_content_right">
+
+          <div class="projects_box" style="margin-top: -60px;">
+            <div><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
+            </div>
+            <div>JavaScript (Управление машиной)</div>
+          </div>
+
           <div class="projects_box">
             <a class="project_design" href="https://aae9c035-fdd3-4463-9b8b-1663e1d9b618-00-1ssvsw41b0qyy.global.replit.dev/"> </a>
             <div>Адаптивный дизайн <br>(HTML/CSS)</div>
