--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
 
         <div class="projects_content_right">
 
-          <div class="projects_box" style="margin-top: -60px;">
-            <div><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
+          <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
+            <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
             </div>
-            <div>JavaScript (Управление машиной)</div>
+            <div style="margin-top: 240px;">JavaScript (Управление машиной)</div>
           </div>
 
           <div class="projects_box">
