--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="navbar"><a href="#projects">PROJECTS</a> </div>
         <div class="navbar"><a href="#contacts">CONTACTS</a></div>
       </div>
-      <ul class="navbar_small_button"> <img src="button.png" alt="">
+      <ul class="navbar_small_button"> <img src="public/button.png" alt="">
         <li class="navbar" style="border-top: 1px solid aliceblue; margin-top: 3px;"><a href="#home">HOME</a></li>
         <li class="navbar"><a href="#about">ABOUT</a></li>
          <li class="navbar"><a href="#skills">SKILLS</a></li>
@@ -51,7 +51,7 @@
       <div class="wrapper_header_logo">CODER. DESIGNER.</div>
     </section>
 
-    <div class="portPhoto"  ><img class="myPhoto" src="Screen_my_photo.jpg" alt=""></div>
+    <div class="portPhoto"  ><img class="myPhoto" src="public/Screen_my_photo.jpg" alt=""></div>
 
     <section id="about" class="about">
       
@@ -107,7 +107,7 @@
             <div>
               <div>HTML</div>
               <div class="remove_battery" style="width: 45px;">
-                <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
+                <div class="imgbattery"><img src="public/Background_battery.png" style="width: 100%;" alt=""></div>
               </div>
               <!-- <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div> -->
               <div class="battery"></div>
@@ -212,26 +212,26 @@
         <div class="projects_content_left">
 
           <div class="projects_box" style="margin-top: -40px;">
-            <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="src/deletedBackground.gif" alt=""></a>
+            <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
             </div>
             <div>JavaScript (фононовые темы)</div>
           </div>
 
           <div class="projects_box" style="margin-top: -10px;">
-            <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="ball2.png" alt=""></a>
+            <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="public/ball2.png" alt=""></a>
             </div>
             <div>JavaScript</div>
           </div>
 
           <div class="projects_box">
             <div><a class="project_bootstrap" href="https://belkud.github.io/bootstrap/Settings.html"><img
-                  src="bootstrap-icon.svg" alt=""></a></div>
+                  src="public/bootstrap-icon.svg" alt=""></a></div>
             <div style="white-space: pre;">Мини-проект <br>(Bootstrap)</div>
           </div>
 
           <div class="projects_box">
             <div><a class="project_bootstrap" href="https://ee1f391b-be35-46f7-9933-ab799cdc0612-00-wfjohtfwxr78.global.replit.dev/Homework.html"><img
-                  src="bootstrap-icon.svg" alt=""></a></div>
+                  src="public/bootstrap-icon.svg" alt=""></a></div>
             <div>Расписание <br>(Bootstrap)</div>
           </div>
         </div>
@@ -256,8 +256,8 @@
 
           <div class="projects_box">
             <div style="margin-top: -10px;">
-              <img src="airplane.png" style="width: 136px; position: absolute;" id="airplane" alt="">
-              <img src="planet.png" style="width: 120px; position: relative;" id="planet" alt="">
+              <img src="public/airplane.png" style="width: 136px; position: absolute;" id="airplane" alt="">
+              <img src="public/planet.png" style="width: 120px; position: relative;" id="planet" alt="">
             </div>
             <a class="project_site" href="https://belkud.github.io/---------------/drivers.html"> </a>
             <div>Экскурсии по Сочи<br>(HTML/CSS)</div>
@@ -270,7 +270,7 @@
 
 
     <section id="contacts" class="contacts">
-      <video src="coverr-top-view-of-a-working-girl-4719-1080p.mp4" type="video" autoplay muted loop></video>
+      <video src="public/coverr-top-view-of-a-working-girl-4719-1080p.mp4" type="video" autoplay muted loop></video>
       <div class="contacts_container">
         <h5>Связаться со мной</h5>
         <div class="contacts_content">
