--- a/index.html
+++ b/index.html
@@ -216,6 +216,12 @@
             </div>
             <div>JavaScript (фононовые темы)</div>
           </div>
+        
+          <div class="projects_box" style="margin-top: -40px;">
+            <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
+            </div>
+            <div>JavaScript (фононовые темы)</div>
+          </div>
 
           <div class="projects_box" style="margin-top: -10px;">
             <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="public/ball2.png" alt=""></a>
@@ -238,6 +244,12 @@
 
         <div class="projects_content_right">
 
+          <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
+            <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
+            </div>
+            <div style="margin-top: 240px;">JavaScript (Управление машиной)</div>
+          </div>
+     
           <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
             <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
             </div>
