--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="projects_box" style="margin-top: -40px;">
             <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
             </div>
-            <div>JavaScript (фононовые темы)</div>
+            <div>JavaScript (Питомец кот )</div>
           </div>
 
           <div class="projects_box" style="margin-top: -10px;">
