--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="projects_content_left">
 
           <div class="projects_box" style="margin-top: -40px;">
-            <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
+            <div><a href="https://belkud.github.io/Films/"><img id="fireball" style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
             </div>
             <div>JavaScript (фононовые темы)</div>
           </div>
