--- a/index.html
+++ b/index.html
@@ -214,13 +214,17 @@
           <div class="projects_box" style="margin-top: -40px;">
             <div><a href="https://belkud.github.io/Films/"><img id="fireball" style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
             </div>
-            <div>JavaScript (фононовые темы)</div>
+            <div>Фононовые темы (JavaScript)</div>
           </div>
         
           <div class="projects_box" style="margin-top: -40px;">
-            <div><a href="https://belkud.github.io/Films/"><img style="width: 230px;" src="public/deletedBackground.gif" alt=""></a>
-            </div>
-            <div>JavaScript (Питомец кот )</div>
+            <div style="position: relative; border: 1px solid red; padding: 50px;" ><a href="https://belkud.github.io/Films/">
+              <img  style="width: 150px; position: relative; z-index: 2;" src="public/cat.png" alt="">
+              <img id="catLeg" src="public/cat_leg.png" alt="">
+              <img id="eye" src="public/eye.png" alt="">
+            </a>
+          </div>
+            <div>Питомец кот (JavaScript)</div>
           </div>
 
           <div class="projects_box" style="margin-top: -10px;">
@@ -247,13 +251,13 @@
           <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
             <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
             </div>
-            <div style="margin-top: 240px;">JavaScript (Управление машиной)</div>
+            <div style="margin-top: 240px;">Управление машиной (JavaScript)</div>
           </div>
      
           <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
             <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
             </div>
-            <div style="margin-top: 240px;">JavaScript (Управление машиной)</div>
+            <div style="margin-top: 240px;">abcde (JavaScript)</div>
           </div>
 
           <div class="projects_box">
