--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
             <div>Фононовые темы (JavaScript)</div>
           </div>
         
-          <div class="projects_box" style="margin-top: -40px;">
-            <div style="position: relative; border: 1px solid red; padding: 50px;" ><a href="https://belkud.github.io/Films/">
-              <img  style="width: 150px; position: relative; z-index: 2;" src="public/cat.png" alt="">
+          <div class="projects_box" style="margin-top: -75px;">
+            <div id="catBox" style="position: relative; padding: 50px;" ><a href="https://belkud.github.io/Films/">
+              <img style="width: 150px; position: relative; z-index: 2;" src="public/cat.png" alt="">
               <img id="catLeg" src="public/cat_leg.png" alt="">
               <img id="eye" src="public/eye.png" alt="">
             </a>
           </div>
-            <div>Питомец кот (JavaScript)</div>
+            <div style="margin-top: -55px;">Питомец кот (JavaScript)</div>
           </div>
 
           <div class="projects_box" style="margin-top: -10px;">
