--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </div>
         
           <div class="projects_box" style="margin-top: -75px;">
-            <div id="catBox" style="position: relative; padding: 50px;" ><a href="https://belkud.github.io/Films/">
+            <div id="catBox" style="position: relative; padding: 50px;" ><a href="https://belkud.github.io/Cat/">
               <img style="width: 150px; position: relative; z-index: 2;" src="public/cat.png" alt="">
               <img id="catLeg" src="public/cat_leg.png" alt="">
               <img id="eye" src="public/eye.png" alt="">
@@ -230,7 +230,7 @@
           <div class="projects_box" style="margin-top: -10px;">
             <div><a class="project_ball" href="https://belkud.github.io/vite-project/"><img src="public/ball2.png" alt=""></a>
             </div>
-            <div>JavaScript</div>
+            <div>Мини-проекты (JavaScript)</div>
           </div>
 
           <div class="projects_box">
