--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- <div class="sdf" style=""> -->
         
           <div>
-          Я начинающий специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю Java Script,
+          Я начинающий специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю JavaScript,
           работаю с
           Bootstrap.
           В сферу IT пришел в прошлом году и меня программирование очень заинтересовало. С того времени компьютер стал
@@ -248,16 +248,16 @@
 
         <div class="projects_content_right">
 
+          <div id="" class="projects_box" style="margin-top: 20px; position: relative;">
+            <div style="margin-left: 0px;"><a href="https://belkud.github.io/Asynchrony_in_JavaScript/"><img id="nodeServer" src="public/nodeServer.png" alt=""></a>
+            </div>
+            <div style="margin-top: 20px;">Серверная часть (JavaScript)</div>
+          </div>
+
           <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
             <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
             </div>
             <div style="margin-top: 240px;">Управление машиной (JavaScript)</div>
-          </div>
-     
-          <div id="carBlock" class="projects_box" style="margin-top: -60px; position: relative;">
-            <div style="margin-left: -90px;"><a href="https://belkud.github.io/Education/"><img id="car" src="public/Ferrari2.png" alt=""><img id="car2" src="public/Ferrari3.png" alt=""></a>
-            </div>
-            <div style="margin-top: 240px;">abcde (JavaScript)</div>
           </div>
 
           <div class="projects_box">
