--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="battery_position">
             <div>
               <div>HTML</div>
-              <div class="remove_battery" style="width: 45px;">
+              <div class="remove_battery" style="width: 100%;">
                 <div class="imgbattery"><img src="public/Background_battery.png" style="width: 100%;" alt=""></div>
               </div>
               <!-- <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;"   alt=""></div> -->
@@ -177,7 +177,7 @@
 
           <div class="battery_position">
             <div>
-              <div>BootsTrap</div>
+              <div>Bootstrap</div>
               <div class="remove_battery" style="width: 110px;">
                 <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
               </div>
