--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
           <div class="battery_position">
             <div>
-              <div>TypeScript</div>
+              <div>СУБД</div>
               <div class="remove_battery" style="width: 110px;">
                 <div class="imgbattery"><img src="Background_battery.png" style="width: 100%;" alt=""></div>
               </div>
