--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <!-- <div class="sdf" style=""> -->
         
           <div>
-          Я начинающий специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю JavaScript,
+          Я специалист в IT сфере ПК и знаю такие языки как HTML и CSS, а также учу и понимаю JavaScript,
           работаю с
           Bootstrap.
-          В сферу IT пришел в прошлом году и меня программирование очень заинтересовало. С того времени компьютер стал
+          В сферу IT пришел несколько лет назад и меня программирование очень заинтересовало. С того времени компьютер стал
           моим неразлучным другом.
         </div>
         <!-- <div>
